Extend list of checked operation ids